--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: objective-c
 osx_image: xcode 7.3
-xcode_project: YFLog.xcodeproj
-xcode_scheme: YFLogTests
+script: xctool -project YFLog.xcodeproj -scheme 'YFLogTests' -configuration Debug -sdk iphonesimulator -arch i386 run-tests
