--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 osx_image: xcode 7.3
-script: xctool -project YFLog.xcodeproj -scheme 'YFLogTests' -configuration Debug -sdk iphonesimulator -arch i386 run-tests
+script: xctool -project YFLog.xcodeproj -scheme 'YFLogTests' -configuration Debug -sdk iphonesimulator run-tests
