--- a/YFLog.xcodeproj/xcshareddata/xcschemes/YFLogTests.xcscheme
+++ b/YFLog.xcodeproj/xcshareddata/xcschemes/YFLogTests.xcscheme
@@ -8,7 +8,7 @@
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "NO"
+            buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
             buildForAnalyzing = "NO">
@@ -61,6 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C658CCE61E0252B200511B6E"
+            BuildableName = "YFLogTests.xctest"
+            BlueprintName = "YFLogTests"
+            ReferencedContainer = "container:YFLog.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,6 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C658CCE61E0252B200511B6E"
+            BuildableName = "YFLogTests.xctest"
+            BlueprintName = "YFLogTests"
+            ReferencedContainer = "container:YFLog.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
